fix(mentions): existing truncation issue on suggestions details (#1695)
* feat: add a mentions component (extract from messaage input)

* refactor: extract mentions from message input and replace with mentions component

* refactor: update message input tests - replace mentions input with mentions component

* fix: lint

* refactor(message-input): extract mentions styles to standalone mentions component stylesheet

* refactor: remove unused style imports

* refactor: rename class names

* refactor: tidy up classnames

* fix(mentions): existing truncation issue on suggestions details

--- a/src/components/message-input/mentions/styles.scss
+++ b/src/components/message-input/mentions/styles.scss
@@ -84,6 +84,10 @@
     padding: 0px;
   }
 
+  &__suggestions-user-details {
+    overflow: hidden;
+  }
+
   &__suggestions-name {
     white-space: nowrap;
     overflow: hidden;
